v1.7.0 — Security & hardening