@@ -23,7 +23,13 @@ import net.vheerden.archi.mcp.registry.CommandRegistry;
 import net.vheerden.archi.mcp.response.ResponseFormatter;
 
 /**
- * Tests for {@link ApprovalHandler} (Story 7-6).
+ * Tests for {@link ApprovalHandler} (control plane moved to the human).
+ *
+ * <p>The handler exposes only the read-only {@code list-pending-approvals}
+ * observation tool. The former {@code set-approval-mode} (toggle) and {@code decide-mutation}
+ * (approve/reject) MCP tools are removed — the agent cannot move its own gate or approve its own
+ * queued change. Approve/reject now lives in
+ * {@link net.vheerden.archi.mcp.server.ApprovalService} (see {@code ApprovalServiceTest}).</p>
  */
 public class ApprovalHandlerTest {
 
@@ -45,53 +51,23 @@ public class ApprovalHandlerTest {
         handler.registerTools();
     }
 
-    // ---- set-approval-mode tests ----
+    // ---- Surface shape: only the read-only observation tool remains ----
 
     @Test
-    public void shouldRegisterThreeTools() {
-        assertEquals(3, registry.getToolSpecifications().size());
+    public void shouldRegisterOnlyListPendingApprovalsTool() {
+        var names = registry.getToolSpecifications().stream()
+                .map(s -> s.tool().name())
+                .toList();
+        assertEquals(1, names.size());
+        assertTrue("list-pending-approvals must remain", names.contains("list-pending-approvals"));
+        assertFalse("set-approval-mode must be removed (AC-1)", names.contains("set-approval-mode"));
+        assertFalse("decide-mutation must be removed (AC-2)", names.contains("decide-mutation"));
     }
 
-    @Test
-    public void shouldEnableApprovalMode() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("set-approval-mode",
-                Map.of("enabled", true));
-
-        assertFalse(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> data = (Map<String, Object>) envelope.get("result");
-        assertEquals(true, data.get("approvalMode"));
-        assertTrue(dispatcher.isApprovalRequired("default"));
-    }
+    // ---- list-pending-approvals tests (retained + truthful) ----
 
     @Test
-    public void shouldDisableApprovalMode() throws Exception {
-        dispatcher.setApprovalRequired("default", true);
-
-        McpSchema.CallToolResult result = invokeTool("set-approval-mode",
-                Map.of("enabled", false));
-
-        assertFalse(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> data = (Map<String, Object>) envelope.get("result");
-        assertEquals(false, data.get("approvalMode"));
-        assertFalse(dispatcher.isApprovalRequired("default"));
-    }
-
-    @Test
-    public void shouldReturnError_whenEnabledMissing() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("set-approval-mode",
-                Collections.emptyMap());
-
-        assertTrue(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> error = (Map<String, Object>) envelope.get("error");
-        assertEquals("INVALID_PARAMETER", error.get("code"));
-    }
-
-    // ---- list-pending-approvals tests ----
-
-    @Test
+    @SuppressWarnings("unchecked")
     public void shouldReturnEmptyList_whenNoProposals() throws Exception {
         McpSchema.CallToolResult result = invokeTool("list-pending-approvals",
                 Collections.emptyMap());
@@ -102,9 +78,12 @@ public class ApprovalHandlerTest {
         assertEquals(0, data.get("pendingCount"));
         List<?> proposals = (List<?>) data.get("proposals");
         assertTrue(proposals.isEmpty());
+
+        assertNoRemovedToolStrings(envelope);
     }
 
     @Test
+    @SuppressWarnings("unchecked")
     public void shouldReturnProposals_whenPending() throws Exception {
         // Store a proposal via the dispatcher's public API
         dispatcher.storeProposal("default", "create-element", "Create BusinessActor: Test",
@@ -123,148 +102,34 @@ public class ApprovalHandlerTest {
         assertEquals(1, proposals.size());
         assertEquals("create-element", proposals.get(0).get("tool"));
         assertEquals("pending", proposals.get(0).get("status"));
-    }
 
-    // ---- decide-mutation approve tests ----
-
-    @Test
-    public void shouldApproveSingleProposal() throws Exception {
-        String id = dispatcher.storeProposal("default", "create-element", "Create Node",
-                new StubCommand("approve-cmd"), "nodeDto", null,
-                Map.of("type", "Node"), "Valid", Instant.now());
-
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", id, "decision", "approve"));
-
-        assertFalse(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> data = (Map<String, Object>) envelope.get("result");
-        assertEquals("approved", data.get("decision"));
-        assertEquals(id, data.get("proposalId"));
-        assertEquals("nodeDto", data.get("entity"));
-        // Command should have been dispatched
-        assertEquals(1, dispatcher.dispatchedCommands.size());
+        assertNoRemovedToolStrings(envelope);
     }
 
     @Test
-    public void shouldReturnError_whenApprovingNonExistentProposal() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "p-999", "decision", "approve"));
+    @SuppressWarnings("unchecked")
+    public void shouldReportApprovalMode_fromGlobalProvider() throws Exception {
+        // The gate is global now: list-pending-approvals reflects the injected provider, not
+        // any per-session flag the agent could have set.
+        dispatcher.setApprovalModeProvider(() -> true);
+        Map<String, Object> on = (Map<String, Object>) parseJson(
+                invokeTool("list-pending-approvals", Collections.emptyMap())).get("result");
+        assertEquals(Boolean.TRUE, on.get("approvalMode"));
 
-        assertTrue(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> error = (Map<String, Object>) envelope.get("error");
-        assertEquals("PROPOSAL_NOT_FOUND", error.get("code"));
-    }
-
-    @Test
-    public void shouldReturnError_whenInvalidDecision() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "p-1", "decision", "maybe"));
-
-        assertTrue(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> error = (Map<String, Object>) envelope.get("error");
-        assertEquals("INVALID_PARAMETER", error.get("code"));
-    }
-
-    // ---- decide-mutation reject tests ----
-
-    @Test
-    public void shouldRejectSingleProposal() throws Exception {
-        String id = dispatcher.storeProposal("default", "create-view", "Create view",
-                new StubCommand("reject-cmd"), "viewDto", null,
-                Map.of("name", "My View"), "Valid", Instant.now());
-
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", id, "decision", "reject", "reason", "Not needed"));
-
-        assertFalse(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> data = (Map<String, Object>) envelope.get("result");
-        assertEquals("rejected", data.get("decision"));
-        assertEquals(id, data.get("proposalId"));
-        assertEquals("Not needed", data.get("reason"));
-        // No command should have been dispatched
-        assertEquals(0, dispatcher.dispatchedCommands.size());
-    }
-
-    @Test
-    public void shouldReturnError_whenRejectingNonExistentProposal() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "p-999", "decision", "reject"));
-
-        assertTrue(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> error = (Map<String, Object>) envelope.get("error");
-        assertEquals("PROPOSAL_NOT_FOUND", error.get("code"));
-    }
-
-    // ---- decide-mutation approve-all tests ----
-
-    @Test
-    public void shouldApproveAllProposals() throws Exception {
-        dispatcher.storeProposal("default", "create-element", "Create A",
-                new StubCommand("c1"), "dto1", null, Map.of(), "v", Instant.now());
-        dispatcher.storeProposal("default", "create-element", "Create B",
-                new StubCommand("c2"), "dto2", null, Map.of(), "v", Instant.now());
-
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "all", "decision", "approve"));
-
-        assertFalse(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> data = (Map<String, Object>) envelope.get("result");
-        assertEquals("approve-all", data.get("decision"));
-        assertEquals(2, data.get("totalProcessed"));
-        assertEquals(2, dispatcher.dispatchedCommands.size());
-    }
-
-    @Test
-    public void shouldReturnError_whenApproveAllWithNoProposals() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "all", "decision", "approve"));
-
-        assertTrue(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> error = (Map<String, Object>) envelope.get("error");
-        assertEquals("APPROVAL_NOT_ACTIVE", error.get("code"));
-    }
-
-    // ---- decide-mutation reject-all tests ----
-
-    @Test
-    public void shouldRejectAllProposals() throws Exception {
-        dispatcher.storeProposal("default", "create-element", "Create A",
-                new StubCommand("c1"), "dto1", null, Map.of(), "v", Instant.now());
-        dispatcher.storeProposal("default", "create-view", "Create View",
-                new StubCommand("c2"), "dto2", null, Map.of(), "v", Instant.now());
-
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "all", "decision", "reject"));
-
-        assertFalse(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> data = (Map<String, Object>) envelope.get("result");
-        assertEquals("reject-all", data.get("decision"));
-        assertEquals(2, data.get("totalRejected"));
-        assertEquals(0, dispatcher.dispatchedCommands.size());
-        // All should be removed
-        assertTrue(dispatcher.getPendingProposals("default").isEmpty());
-    }
-
-    @Test
-    public void shouldReturnError_whenRejectAllWithNoProposals() throws Exception {
-        McpSchema.CallToolResult result = invokeTool("decide-mutation",
-                Map.of("proposalId", "all", "decision", "reject"));
-
-        assertTrue(result.isError());
-        Map<String, Object> envelope = parseJson(result);
-        Map<String, Object> error = (Map<String, Object>) envelope.get("error");
-        assertEquals("APPROVAL_NOT_ACTIVE", error.get("code"));
+        dispatcher.setApprovalModeProvider(() -> false);
+        Map<String, Object> off = (Map<String, Object>) parseJson(
+                invokeTool("list-pending-approvals", Collections.emptyMap())).get("result");
+        assertEquals(Boolean.FALSE, off.get("approvalMode"));
     }
 
     // ---- Helper Methods ----
+
+    /** Asserts the response never tells the agent to call a removed control-plane tool. */
+    private void assertNoRemovedToolStrings(Map<String, Object> envelope) {
+        String json = envelope.toString();
+        assertFalse("response must not reference set-approval-mode", json.contains("set-approval-mode"));
+        assertFalse("response must not reference decide-mutation", json.contains("decide-mutation"));
+    }
 
     @SuppressWarnings("unchecked")
     private Map<String, Object> parseJson(McpSchema.CallToolResult result) throws Exception {
